--- a/package.json
+++ b/package.json
@@ -1,21 +1,29 @@
 {
-  "name": "salutation",
-  "version": "1.0.0",
-  "description": "Salutation is a highly customizable greetings bot to welcome new members to your server. Every aspect of the greeting image can be changed, resulting in a truly unique welcome.",
-  "main": "dist/index.js",
-  "repository": "https://github.com/willuhm-js/Salutation",
-  "author": "William Faircloth",
-  "license": "Apache-2.0",
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.42.1",
-    "@typescript-eslint/parser": "^5.42.1",
-    "eslint": "^8.27.0",
-    "jest": "^29.3.0",
-    "typescript": "^4.8.4"
-  },
-  "scripts": {
-    "build": "tsc",
-    "lint": "eslint src",
-    "test": "jest"
-  }
+	"name": "salutation",
+	"version": "1.0.0",
+	"description": "Salutation is a highly customizable greetings bot to welcome new members to your server. Every aspect of the greeting image can be changed, resulting in a truly unique welcome.",
+	"main": "dist/index.js",
+	"repository": "https://github.com/willuhm-js/Salutation",
+	"author": "William Faircloth",
+	"license": "Apache-2.0",
+	"devDependencies": {
+		"jest": "^29.3.0",
+		"prettier": "2.7.1",
+		"typescript": "^4.8.4"
+	},
+	"scripts": {
+		"dev": "yarn build && yarn start",
+		"start": "node dist/index.js",
+		"build": "tsc",
+		"lint": "eslint src",
+		"test": "jest",
+		"format": "yarn prettier --write ."
+	},
+	"dependencies": {
+		"@napi-rs/canvas": "^0.1.30",
+		"canvas-constructor": "^7.0.0",
+		"discord.js": "^14.6.0",
+		"dotenv": "^16.0.3",
+		"mongoose": "^6.7.2"
+	}
 }
