--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
 		"format": "yarn prettier --write ."
 	},
 	"dependencies": {
-		"@napi-rs/canvas": "^0.1.30",
 		"canvas-constructor": "^7.0.0",
 		"discord.js": "^14.6.0",
 		"dotenv": "^16.0.3",
-		"mongoose": "^6.7.2"
+		"mongoose": "^6.7.2",
+		"skia-canvas": "^1.0.1"
 	}
 }
